# samplicator-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  cli.rs  main.rs
