[package]
name = "samplicator"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
nix = { version = "0.30.1", features = ["process"] }
pnet_packet = "0.35.0"
prometheus = "0.14.0"
socket2 = { version = "0.6.0", features = ["all"] }
